cluster/apps/spuxx-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spuxx-dev
  namespace: spuxx-dev
  labels:
    app: spuxx-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spuxx-dev
  template:
    metadata:
      labels:
        app: spuxx-dev
    spec:
      containers:
        - name: spuxx-dev
          image: spuxx/spuxx-dev:master-20230619-132525-eb89c871509fd4fa1dfd24da00cef61ce8e91921 # {"$imagepolicy": "spuxx-dev:spuxx-dev"}
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
