cluster/apps/spuxx-dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spuxx-dev
  namespace: spuxx-dev
spec:
  selector:
    app: spuxx-dev
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
